--- a/src/component/accordian/style.css
+++ b/src/component/accordian/style.css
@@ -22,7 +22,7 @@
   }
   
   .item {
-    background: #614101;
+    background: yellowgreen;
     margin-bottom: 10px;
     padding: 10px 20px;
   }
